# ani2xcurtk

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  tasks.py
ani2xcurtk/: __init__.py  cli.py
ani2xcurtk/a2xc/: __init__.py  a2xc.py
